--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 
 services:
-  mkdocs:
-    container_name: mkdocs
-    image: squidfunk/mkdocs-material
+  docs:
+    build: .
+    image: keo7/docs
     restart: always
     ports:
       - "8002:8000"
