--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ markdown_extensions:
   - toc:
       permalink: true
   - footnotes
+  - mdx_include:
+      base_path: docs
   - attr_list
   - md_in_html
 
@@ -21,6 +23,7 @@ plugins:
   - search
   - minify:
       minify_html: true
+  - glightbox
 
 extra_css:
   - stylesheets/extra.css
