--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,19 @@ repo_url: https://github.com/KeironO/docs
 theme:
   name: 'material'
   font:
-    text: 'Ubuntu'
-    code: 'Ubuntu Mono'
+    text: 'Inter'
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+
 
 markdown_extensions:
   - admonition
